fix: Add back in onClick... wasn't useless :D * style: Add background color and positioning to header / mobile nav * refactor: Change mobile nav to use Section * style: Hide overflow on Html

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,9 @@
     @include paddingY(24);
     justify-content: space-between;
     gap: rem(40);
+    position: relative;
+    z-index: 101;
+    background-color: color(dark, blue);
     .logo {
         width: rem(250);
     }
